--- a/0.xcodeproj/xcshareddata/xcschemes/Quantum Analyzer.xcscheme
+++ b/0.xcodeproj/xcshareddata/xcschemes/Quantum Analyzer.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "A0C768B41DF3F2CB009380D6"
                BuildableName = "Quantum Analyzer.app"
                BlueprintName = "Quantum Analyzer"
-               ReferencedContainer = "container:Quantum Analyzer.xcodeproj">
+               ReferencedContainer = "container:0.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -35,14 +35,14 @@
             BlueprintIdentifier = "A0C768B41DF3F2CB009380D6"
             BuildableName = "Quantum Analyzer.app"
             BlueprintName = "Quantum Analyzer"
-            ReferencedContainer = "container:Quantum Analyzer.xcodeproj">
+            ReferencedContainer = "container:0.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "ad Hoc"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -58,7 +58,7 @@
             BlueprintIdentifier = "A0C768B41DF3F2CB009380D6"
             BuildableName = "Quantum Analyzer.app"
             BlueprintName = "Quantum Analyzer"
-            ReferencedContainer = "container:Quantum Analyzer.xcodeproj">
+            ReferencedContainer = "container:0.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -77,7 +77,7 @@
             BlueprintIdentifier = "A0C768B41DF3F2CB009380D6"
             BuildableName = "Quantum Analyzer.app"
             BlueprintName = "Quantum Analyzer"
-            ReferencedContainer = "container:Quantum Analyzer.xcodeproj">
+            ReferencedContainer = "container:0.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
