--- a/Quantum Analyzer.xcodeproj/xcshareddata/xcschemes/Quantum Analyzer.xcscheme
+++ b/Quantum Analyzer.xcodeproj/xcshareddata/xcschemes/Quantum Analyzer.xcscheme
@@ -42,7 +42,7 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "ad Hoc"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
